# safeinterp

./: README.md  pyproject.toml
examples/: example_auto_vs_manual.py  example_extrapolation.py  example_modes.py
safeinterp/: core.py
